# dev-makefiles

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci_cd.yml
makefiles/: clean.mk  config.mk  confirm.mk  docker.mk  docs.mk  domain_module_agents.mk  environment.mk  git.mk  git_pre_commit.mk  git_repo.mk  github-repo.mk  github-repo0.mk  github.mk  github_workflows.mk  module_api.mk  module_app.mk  module_cli.mk  module_core.mk  module_resources.mk  module_services.mk  module_utils.mk  modules.mk  notebooks.mk  package.mk  pyproject.mk  readme.mk  run.mk  scaffold.mk  scripts.mk  tests.mk  utils.mk
makefiles/scripts/: user_interaction.sh
notebooks/: README.ipynb
scripts/: cli_start_app.sh  start_api.sh
src/agents/dev_makefiles/core/: __init__.py  config.py  demo.py
src/dev_makefiles/: Dockerfile.base  __init__.py  config.py  main.py
src/dev_makefiles/agents/core/: __init__.py  config.py  demo.py
src/dev_makefiles/api/: Dockerfile  __init__.py
src/dev_makefiles/api/v1/: api.py
src/dev_makefiles/api/v2/: api.py
src/dev_makefiles/app/: Dockerfile  __init__.py  main.py
src/dev_makefiles/app/pages/: data_visualization.py  settings.py
src/dev_makefiles/cli/: Dockerfile  __init__.py  __main__.py  commands.py
src/dev_makefiles/core/: __init__.py  config.py  demo.py
src/dev_makefiles/resources/: __init__.py
src/dev_makefiles/services/: Dockerfile  __init__.py  main_service.py
src/dev_makefiles/utils/: demo_util.py
tests/: __init__.py  test_core.py  test_services.py
(+6 files in other folders)
